--- a/app/views/representatives/show.html.haml
+++ b/app/views/representatives/show.html.haml
@@ -1,8 +1,8 @@
 .container-fluid.py-5
     .row
         .col-md-8.offset-md-2
-            // TODO: add image of rep
+        // TODO: add image of rep
         .col-md-8.offset-md-2
-            %h1.text-center #{@representatives.name}
-         // TODO: add address
-         // TODO: add political party
+            %h1.text-center to_s(@representatives.name)
+            // TODO: add address
+            // TODO: add political party
