cleaned up some string conv

--- a/app/views/representatives/show.html.haml
+++ b/app/views/representatives/show.html.haml
@@ -3,6 +3,6 @@
         .col-md-8.offset-md-2
         // TODO: add image of rep
         .col-md-8.offset-md-2
-            %h1.text-center to_s(@representatives.name)
+            %h1.text-center = @representatives.name.to_s
             // TODO: add address
             // TODO: add political party
