--- a/app/views/representatives/search.html.haml
+++ b/app/views/representatives/search.html.haml
@@ -14,7 +14,7 @@
                             %tr
                                 %td
                                     = link_to representative_show_page_path(rep.id), class: 'content' do
-                                        to_s(rep.name)
+                                        = rep.name.to_s
                                 %td= rep.title
                                 %td
                                     = link_to representative_news_items_path(rep.id), class: 'btn btn-primary' do
