--- a/app/views/representatives/search.html.haml
+++ b/app/views/representatives/search.html.haml
@@ -12,7 +12,9 @@
                     %tbody
                         - @representatives.each_with_index do |rep, _index|
                             %tr
-                                %td= rep.name
+                                %td
+                                    = link_to representative_show_page_path(rep.id), class: 'content' do
+                                        = rep.name.to_s
                                 %td= rep.title
                                 %td
                                     = link_to representative_news_items_path(rep.id), class: 'btn btn-primary' do
