--- a/app/views/my_news_items/_form.html.haml
+++ b/app/views/my_news_items/_form.html.haml
@@ -34,5 +34,11 @@
         .col-sm-10
             = select :news_item, :issue, NewsItem.issues_list, { include_blank: true },
             class: 'form-control'
+    .form-group.row
+        .col-sm-2
+            = label :news_item, :rating, class: 'col-form-label'
+        .col-sm-10
+            = select :news_item, :rating, NewsItem.ratings, { include_blank: true },
+            class: 'form-control'
     .actions
         = f.submit 'Save', class: 'btn btn-primary'
